[gd_scene load_steps=3 format=3 uid="uid://dup40kcboeut4"]

[ext_resource type="Script" path="res://scenes/menus/start_menu.gd" id="1_qsxef"]
[ext_resource type="Texture2D" uid="uid://dr5s8v7laoswh" path="res://assets/art/machine/main_bg.png" id="2_has5h"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qsxef")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UpPlaceHolder" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "游戏名"
horizontal_alignment = 1

[node name="UpPlaceHolder2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="LeftPlaceHolder" type="Control" parent="VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "新的一局"

[node name="InstructionButton" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "说明书"

[node name="ExitButton" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "退出游戏"

[node name="RightPlaceHolder" type="Control" parent="VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="BlackMask" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="InstructionContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="InstructionContainer"]
z_index = -1
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_has5h")
flip_v = true
